// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fetch resolve data with lazy loading. 1`] = `
<div>
  parent
</div>
`;

exports[`Fetch resolve data with lazy loading. 2`] = `
<div>
  child
</div>
`;

exports[`Fetch resolve data with reusable resolve data. 1`] = `
Object {
  "web": Object {
    "projects": Array [
      Object {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": "old user",
  },
}
`;

exports[`Fetch resolve data. 1`] = `
Object {
  "web": Object {
    "projects": Array [
      Object {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": Object {
      "id": "AWgrmJp1SjjuUM2bzZXM",
      "name": "User",
    },
  },
}
`;

exports[`Find the route by the name. 1`] = `
Route {
  "component": undefined,
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;

exports[`Flatten resolve data. 1`] = `
Object {
  "user": Object {
    "id": "id",
    "name": "name",
  },
}
`;

exports[`Generate a route with the parent. 1`] = `
Route {
  "component": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/users/([\\\\w-]{20})/projects",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
  "name": "web",
  "onEnter": [Function],
  "parents": Array [],
  "resolve": Object {
    "id": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
  ],
  "uriTemplate": "/users/{userId}/projects",
}
`;

exports[`Generate a route with the parent. 2`] = `
Route {
  "component": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/users/([\\\\w-]{20})/projects/users/([\\\\w-]{20})/projects/([\\\\w-]{20})",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\$/,
  "name": "web.project",
  "onEnter": [Function],
  "parents": Array [
    Route {
      "component": [Function],
      "isAbstract": false,
      "loadComponent": undefined,
      "matchPattern": "/users/([\\\\w-]{20})/projects",
      "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
      "name": "web",
      "onEnter": [Function],
      "parents": Array [],
      "resolve": Object {
        "id": [Function],
      },
      "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
      "uriParamKeys": Array [
        "userId",
        "?index",
        "?sort",
      ],
      "uriTemplate": "/users/{userId}/projects",
    },
  ],
  "resolve": Object {
    "id": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects/{projectId:[\\\\w-]{20}}",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
    "userId",
    "projectId",
  ],
  "uriTemplate": "/users/{userId}/projects/users/{userId}/projects/{projectId}",
}
`;

exports[`Generate the URI of the route with params 1`] = `"/users/AWgrmJp1SjjuUM2bzZXM/projects?index=0&sort=asc"`;

exports[`Parse params from the location. 1`] = `
Object {
  "index": "0",
  "sort": "asc",
  "userId": "AWgrmJp1SjjuUM2bzZXM",
}
`;
